# claude-sdlc

./: .gitignore  README.md  pyproject.toml
.claude-plugin/: marketplace.json
.claude/commands/: branch.md  bug.md  chore.md  commit.md  feature.md  implement.md  install.md  locate.md  pr_resolve.md  prime.md  pull_request.md  reset.md  test_plan.md  tools.md
agents/00ace168/classify/: 7754fdf4-d32d-4d64-b139-c83065a162e1.jsonl
agents/56014676/classify/: d07524be-0dfa-4c9f-bee1-2538eaf25982.jsonl
ai-specs/: agent-detection-feature.md  sdlc-cli-tool.md  watcher-command.md
docs/decisions/: adr-short-template.md  adr-template.md  index.md
docs/specs/: gitlab-watcher.md
plugins/cadre/: LICENSE
plugins/cadre/.claude-plugin/: plugin.json
plugins/cadre/commands/: init.md
plugins/sdlc/: LICENSE
plugins/sdlc/.claude-plugin/: plugin.json
plugins/sdlc/agents/: architecture-strategist.md  code-simplicity-reviewer.md  gh-ci-historian.md  glab-ci-historian.md  (+4 more)
scripts/: adw_plan_build.py  health_check.py  start_webhook.sh  stop_webhook.sh  watcher.py
sdlc/: README.md  __init__.py  cli.py
sdlc/commands/: __init__.py  gitlab_watcher.py  health.py  watcher.py
sdlc/lib/: __init__.py  agent.py  claude.py  devtunnel.py  github.py  gitlab.py  gitlab_agent.py  gitlab_models.py  gitlab_webhook.py  utils.py  webhook.py
tests/: __init__.py  test_health.py
tests/commands/: __init__.py  test_gitlab_watcher.py  test_watcher.py
tests/lib/: __init__.py  test_agent.py  test_claude.py  test_devtunnel.py  test_gitlab.py  test_gitlab_webhook.py  test_webhook.py
(+28 files in other folders)
